--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
-nltk
-feedparser
-tqdm
-requests
 beautifulsoup4
-pandas
-numpy
-scikit-learn
-openai
-spacy
+bs4
+difflib
+ebooklib
+fastapi
+feedgen
+feedparser
 jiwer
+joblib
+json
+langdetect
+lexical-diversity
+nltk
+numpy
+openai
+os
+pandas
+requests
+scikit-learn
+sentence-transformers
+spacy
+textblob
 textstat
+tqdm
+uvicorn
