--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
 beautifulsoup4
 bs4
+collections
+datetime
 difflib
 ebooklib
 fastapi
 feedgen
 feedparser
+hashlib
 jiwer
 joblib
 json
 langdetect
 lexical-diversity
+logging
 nltk
 numpy
 openai
 os
 pandas
+re
 requests
 scikit-learn
 sentence-transformers
@@ -22,4 +27,5 @@ spacy
 textblob
 textstat
 tqdm
+typing
 uvicorn
