--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py') > pylint_report.txt
+        pylint $(git ls-files '*.py') > pylint_report.txt 2>&1 || true
     - name: Upload Pylint report
       uses: actions/upload-artifact@v2
       with:
