--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ numpy==1.24.4
 openai==1.30.5
 pandas==2.2.2
 PyYAML==6.0.1
+psutil==5.9.8
 requests==2.32.3
 scikit_learn==1.4.2
 sentence_transformers==2.7.0
