--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ textblob==0.18.0.post0
 textstat==0.7.3
 tqdm==4.66.3
 typer==0.9.0
+# streamlit 
+# uncomment above if you want to run streamlit web gui
