--- a/config.yaml
+++ b/config.yaml
@@ -10,22 +10,26 @@ similarity_options:
 ## llm_processor.py settings
 
 # API configuration settings
+# Only one API configuration should be active at any time.
 api_config:
-  # Uncomment the relevant API configuration and comment the other to switch APIs
-  
+  selected_api: "Groq"  # Active API can be "OpenAI", "Groq", or "Ollama"
+
+  # Example configurations for different APIs:
+
   # OpenAI API configuration
   # openai_api_url: "https://api.openai.com/v1/chat/completions"
-  # openai_api_key: ""  # Enter your OpenAI API key here
-  # openai_model: "gpt-3.5-turbo"  # Model to use from OpenAI
-  
+  # openai_api_key: "your_openai_api_key"
+  # openai_model: "gpt-3.5-turbo"
+
   # Groq API configuration
-  # groq_api_url: "https://api.groq.com/openai/v1/chat/completions"
-  # groq_api_key: ""  # Enter your Groq API key here
-  # groq_model: "llama3-70b-8192"  # Model to use from Groq
+  groq_api_url: "https://api.groq.com/openai/v1/chat/completions"
+  groq_api_key: "your_groq_api_key"
+  groq_model: "llama3-8b-8192"
 
   # Ollama API configuration
-  ollama_api_url: "http://localhost:11434/api/chat"  # URL for local Ollama API server
-  ollama_model: "phi3"  # Model to use from Ollama (tested and working by using both phi3 and llama3)
+  # ollama_api_url: "http://localhost:11434/api/chat"
+  # ollama_model: "phi3"
+
 
 # Folder configuration settings
 folders:
