--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,11 @@ jobs:
       - name: Check if commit affects non-excluded files
         id: check_changes
         run: |
-          CHANGED_FILES=$(git diff --name-only HEAD~1)
+          if git rev-parse HEAD~1 >/dev/null 2>&1; then
+            CHANGED_FILES=$(git diff --name-only HEAD~1)
+          else
+            CHANGED_FILES=$(git diff --name-only 4b825dc642cb6eb9a060e54bf8d69288fbee4904)
+          fi
           echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
         shell: bash
 
