--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
           else
             CHANGED_FILES=$(git diff --name-only 4b825dc642cb6eb9a060e54bf8d69288fbee4904)
           fi
-          echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
+          echo "CHANGED_FILES=$(echo $CHANGED_FILES | tr '\n' ' ' | sed 's/ /%20/g')" >> $GITHUB_ENV
         shell: bash
 
       - name: Publish package to PyPI
