--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,21 +36,16 @@ jobs:
       - name: Build package
         run: python setup.py sdist bdist_wheel
 
-      - name: Publish to Test PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
-        run: |
-          twine upload --repository-url https://test.pypi.org/legacy/ dist/*
-
-      - name: Verify installation from Test PyPI
-        run: |
-          pip install --index-url https://test.pypi.org/simple/ uglypy --extra-index-url https://pypi.org/simple
-
       - name: Check if important files were changed
         id: check_important_files
         run: |
-          git diff --name-only HEAD~1 > changed_files.txt
+          if git rev-parse HEAD~1 >/dev/null 2>&1; then
+            git diff --name-only HEAD~1 > changed_files.txt
+          else
+            echo "First commit or no previous commit available."
+            echo "setup.py" > changed_files.txt  # Assume changes in important files to trigger the action
+          fi
+          cat changed_files.txt
           if grep -E 'setup.py|requirements.txt|config.py' changed_files.txt; then
             echo "IMPORTANT_FILES_CHANGED=true" >> $GITHUB_ENV
           else
